--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -17,7 +17,7 @@ on:
     # The branches below must be a subset of the branches above
     branches: [ "master" ]
   schedule:
-    - cron: '30 14 * * 5'
+    - cron: '44 18 * * 2'
 
 permissions:
   contents: read
@@ -30,20 +30,45 @@ jobs:
       actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
     name: Scan
     runs-on: ubuntu-latest
+    container:
+      image: returntocorp/semgrep
     steps:
       # Checkout project source
-      - uses: actions/checkout@v4
-
+      - uses: actions/checkout@v3
+      - name: Semgrep Scan
+        id: scan
+        #run: semgrep ci --config=auto --suppress-errors --sarif || true
+        run: |
+            semgrep \
+              --sarif --output report.sarif \
+              --config=semgrep_rules.yaml
+      
       # Scan code using project's configuration on https://semgrep.dev/manage
-      - uses: returntocorp/semgrep-action@fcd5ab7459e8d91cb1777481980d1b18b4fc6735
-        with:
-          publishToken: ${{ secrets.SEMGREP_APP_TOKEN }}
-          publishDeployment: ${{ secrets.SEMGREP_DEPLOYMENT_ID }}
-          generateSarif: "1"
+     # - uses: returntocorp/semgrep-action@fcd5ab7459e8d91cb1777481980d1b18b4fc6735
+      #  with:
+          #publishToken: ${{ secrets.SEMGREP_APP_TOKEN }}
+          #publishDeployment: ${{ secrets.SEMGREP_DEPLOYMENT_ID }}
+        #  generateSarif: "1"
 
       # Upload SARIF file generated in previous step
-      - name: Upload SARIF file
-        uses: github/codeql-action/upload-sarif@v2
+      - name: Severity Warning to Medium
+        id: sevMedium
+        run: |
+            sed -i ':a;N;$!ba;s/"warning"/"Medium"/g' report.sarif 
+                
+      - name: Severity Error to High
+        id: sevHigh
+        run: |
+            sed -i ':a;N;$!ba;s/"error"/"High"/g' report.sarif
+
+      - name: Save Report as Pipeline Artifact
+        uses: actions/upload-artifact@v3
         with:
-          sarif_file: semgrep.sarif
-        if: always()
+          name: report.sarif
+          path: report.sarif
+  
+        # step 4
+     # - name: Publish Code Scanning Alerts
+      #  uses: github/codeql-action/upload-sarif@v2
+      #  with:
+      #    sarif_file: report.sarif
